fleetman-app/position-sim-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-sim-deployment
  namespace: fleetman
  labels:
    app: position-sim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: position-sim
  template:
    metadata:
      labels:
        app: position-sim
    spec:
      containers:
      - name: position-sim-container
        image: supinfo4kube/position-simulator:1.0.1
        ports:
        - containerPort: 8080
