fleetman-app/statefulset-mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: fleetman
spec:
  serviceName: "mongo"
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:3.6.23
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: "1Gi"
            cpu: "0.5"
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
        # readiness/liveness minimal
        # readinessProbe:
        #   exec:
        #     command:
        #       - mongo
        #       - --eval
        #       - "db.adminCommand('ping')"
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
        # livenessProbe:
        #   exec:
        #     command:
        #       - mongo
        #       - --eval
        #       - "db.adminCommand('ping')"
        #   initialDelaySeconds: 30
        #   periodSeconds: 20
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: manual
      resources:
        requests:
          storage: 5Gi
