fleetman-app/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: fleetman
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
