fleetman-app/position-sim-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: position-sim-service
  namespace: fleetman
spec:
  type: ClusterIP
  selector:
    app: position-sim
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
