fleetman-app/position-tracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: position-tracker
  namespace: fleetman
spec:
  selector:
    app: position-tracker
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 30010
  type: ClusterIP
