fleetman-app/service-trucks-queue.yaml
apiVersion: v1
kind: Service
metadata:
  name: trucks-queue
  namespace: fleetman
  labels:
    app: trucks-queue
spec:
  type: ClusterIP
  selector:
    app: trucks-queue
  ports:
    - name: web
      port: 8161
      targetPort: 8161
    - name: tcp
      port: 61616
      targetPort: 61616
