fleetman-app/svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service-cluster
  namespace: fleetman
spec:
  selector:
    app: mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
