fleetman-app/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service-cluster
  namespace: fleetman
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 30080
      targetPort: 80
  type: NodePort
