fleetman-app/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: fleetman
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
