fleetman-app/networkpolicy-mongo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-network-policy
  namespace: fleetman
spec:
  podSelector:
    matchLabels:
      app: mongo
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: position-tracker
    ports:
    - protocol: TCP
      port: 27017
  egress:
  - to:  # DNS resolution
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
